re PR debug/20161 (ICE with dwarf for incomplete element type argument)

PR debug/20161
	* passes.c (rest_of_decl_compilation): If decl is a type and
	we have encountered errors, don't emit debug information.

From-SVN: r102453